# easy_savescum

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: publish.yaml
src/: main.rs
