[package]
name = "easy_savescum"
version = "0.1.1"
authors = ["Psilon <pzixel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
notify = "4.0.12"
clap = { version = "3.1.15", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
dirs = "2.0.2"

[profile.release]
lto = true